--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
+    "cropperjs": "^1.6.2",
+    "firebase": "^10.13.0",
+    "next": "14.2.6",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
+    "react-moment": "^1.1.3",
+    "react-photo-editor": "^2.1.4",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
