--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
     "react-photo-editor": "^2.1.4",
-    "react-toastify": "^10.0.5"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "postcss": "^8",
