--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-cropper": "^2.3.3",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
