--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "cropperjs": "^1.6.2",
+    "eslint-config-next": "^15.0.3",
     "firebase": "^10.13.0",
-    "next": "14.2.6",
-    "react": "^18",
+    "firebase-admin": "^13.0.1",
+    "next": "^15.0.3",
+    "next-auth": "^4.24.10",
+    "react": "^18.3.1",
     "react-cropper": "^2.3.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
